# quantus-apps

./: .gitignore  README.md  all_packages_dart_files.txt  analysis_options.yaml  concat_dart_files.sh  generate_launcher_app_icons.sh  melos.yaml  pubspec.yaml  regenerate_everything.sh  regenerate_runtime_apis.sh  rename_app.sh  upload_ios_build.sh
.dart_tool/: package_config.json  package_config_subset
.dart_tool/extension_discovery/: vs_code.json
.dart_tool/flutter_build/74d355716ae8b0dee19ae7e189c25a2e/: .filecache  aot_assembly_release.stamp  dart_build.d  dart_build.stamp  (+9 more)
.github/workflows/: ci.yaml  ci.yml  ci_2.yaml  create_miner_build.yml
android/app/: build.gradle
app/: README.md  pubspec.yaml
app/lib/: main.dart
app/test/: log_filter_service_test.dart  widget_test.dart
cli/: analysis_options.yaml  pubspec.yaml
cli/lib/: main.dart
cli/test/: widget_test.dart
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: account_profile.dart  dilithium_crypto.dart  extrinsic_payload.dart  main.dart  resonance_extrinsic_payload.dart  substrate_service.dart
macos/Runner.xcodeproj/: project.pbxproj
miner-app/: reset_app.sh
miner-app/lib/: main.dart
miner-app/test/: external_miner_test.dart
mobile-app/: README.md  all_files.txt  analysis_options.yaml  flutter_launcher_icons.yaml  generate_launcher_app_icons.sh  pubspec.yaml  rename_app.sh  upload_ios_build.sh
mobile-app/android/: build.gradle
mobile-app/lib/: main.dart
mobile-app/rust/: Cargo.toml  cargokit.yaml
native/: Cargo.toml
quantus_sdk/: .flutter-plugins  .flutter-plugins-dependencies  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml  regenerate_everything.sh  regenerate_runtime_apis.sh
quantus_sdk/.dart_tool/: package_config.json  package_config_subset
quantus_sdk/lib/: quantus_sdk.dart
quantus_sdk/rust/: Cargo.toml  cargokit.yaml  rust-toolchain
quantus_sdk/rust/src/: frb_generated.rs
quantus_sdk/rust/src/api/: crypto.rs
quantus_sdk/rust_builder/: pubspec.yaml
quantus_sdk/test/: generate_keys_test.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: crypto.rs  hdwallet.rs  mod.rs
rust_builder/ios/: rust_lib_resonance_network_wallet.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_resonance_network_wallet.podspec
test/: crypto_test.dart  widget_test.dart
(+195 files in other folders)
