[package]
name = "wallet_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
path = "src/api/mod.rs"

[dependencies]
flutter_rust_bridge = "=2.9.0"
# Local path (development)
dilithium-crypto = { path = "../../backbone/dilithium-crypto" }
# GitLab repository (production)
# dilithium-crypto = { git = "https://gitlab.com/resonance-network/backbone.git", branch = "main", package = "dilithium-crypto" }
anyhow = "1.0"
